Bug 629968 - Patch SunSpider performance regression. r=brendan, a=sayrer.

This is a temporary hack.

There are two closely related bugs in methodWriteBarrier. One: the two
signatures are meant to be essentially the same, but they aren't; the
slot-based signature fails to do thrash detection in a common case.
Two: if thrash detection were always done, it would unbrand the global
object, wrecking our SunSpider score. Both bugs are tracked in bug
630354.

The bugs have been precariously balanced against one another for a
while. I accidentally changed the status quo in rev b90090c29571,
causing a 15% SS regression. This patch changes it back.